test/Fail/Issue3292a.err
Issue3292a.agda:17.35-36: error: [GeneralizedVarInLetOpenedModule]
Cannot use generalized variable from let-opened module: x
when scope checking x
